# CppCourseProjectKNU

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/main/cpp/: SomeClass.cpp  SomeClass.h
src/main/cpp/FigureComponents/: Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  Polyline2D.cpp  Polyline2D.h  Segment2D.cpp  Segment2D.h  Vector2D.cpp  Vector2D.h
src/main/cpp/FigureComponents/abstract/: AbstractLine.h  AbstractPoint.h
src/main/cpp/Figures/: Polygon2D.cpp  Polygon2D.h  Triangle2D.cpp  Triangle2D.h
src/main/cpp/Figures/abstract/: Figure.h
src/main/cpp/triangulate/: triangulate.cpp  triangulate.h
src/test/: Test.cpp
src/test/cpp/: Test.cpp  TestLine.cpp  TestLine2D.cpp  TestPolygon2D.cpp  TestPolyline2D.cpp  TestSegment2D.cpp  TestTriangle2D.cpp  TestVector2D.cpp
